<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/secondaryMainLayout">

    <TextView
        android:id="@+id/activitySecondaryTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Second Activity"
        android:textSize="25sp"
        android:textColor="#000"
        android:layout_marginTop="80dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actvitySecondaryButtonBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/activitySecondaryTextViewTitle"
        android:text="Go back" />

    <Button
        android:id="@+id/actvitySecondaryButtonStartFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actvitySecondaryButtonBack"
        android:layout_marginTop="50dp"
        android:text="CLICK HERE TO CHECK MOVIE DETAILS"
        />

</androidx.constraintlayout.widget.ConstraintLayout>