<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:id="@+id/movieDetailsMain">

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:text="Movie Title"
        android:textColor="#000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/movieImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/clickTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="Click on Image to change"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/movieImageView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/clickTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:id="@+id/container1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_directiors"
            android:text="DIRECTORS (Click here for more details)"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_star_actors"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="ACTORS (Click here for more details)"
            android:layout_marginTop="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp">

        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_description"
            android:text="Movie Description"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>